syntax = "proto3";

message RendererRequest {
    string url = 1;
    string lang = 2;
}

message RendererResponse {
    int32 status_code = 1;
    string error = 2;
    string redirect_to = 3;
    bytes rendered_html_head = 4;
    bytes rendered_html_body = 5;
    bytes rendered_html_styles = 6;
    bytes rendered_html_scripts = 7;
    int32 ttr = 8;
}
